k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pan
  namespace: pan
spec:
  replicas: 2
  revisionHistoryLimit: 3

  selector:
    matchLabels:
      app: pan

  template:
    metadata:
      labels:
        app: pan

    spec:
      containers:
        - name: pan
          image: ghcr.io/luowei729/pan:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 80

          # ✅ 使用 PVC（替代 hostPath）
          volumeMounts:
            - name: html-volume
              mountPath: /var/www/html/www

      volumes:
        - name: html-volume
          persistentVolumeClaim:
            claimName: pan-pvc

      imagePullSecrets:
        - name: ghcr-secret
