k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pan
  namespace: pan
spec:
  selector:
    app: pan
  sessionAffinity: ClientIP
  ports:
    - port: 80
      targetPort: 80
      nodePort: 32280
  type: NodePort
