k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pan
spec:
  ingressClassName: public
  rules:
  - host: pan.lkz.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pan
            port:
              number: 80
